# YecLite

./: .gitignore  README.md  yeclite.pro
lib/: Cargo.toml
lib/src/: lib.rs
res/: Info.plist  YecLite.xpm  logo.icns  zecwallet-lite.xpm
res/libsodium/: buildlibsodium.sh
src/: about.ui  connection.ui  controller.cpp  firsttimewizard.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mobileappconnector.ui  recurringmultiple.ui  settings.cpp  settings.h  settings.ui  websockets.cpp
src/scripts/: control  desktopentry  dotranslations.sh  dounifiedbuild.ps1  mkmacdmg.sh  mkrelease.sh  mkwininstaller.ps1  signbinaries.sh  zec-qt-wallet.wxs
