[package]
name = "qtlib"
version = "0.1.0"
authors = ["ZecWallet"]
edition = "2018"

[lib]
name = "zecwalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
zecwalletlitelib = { git = "https://github.com/ycashfoundation/yecwallet-light-cli", rev = "bea7717066a4bf847f2098b6e379846165990322" }
