[package]
name = "qtlib"
version = "0.1.0"
authors = ["ZecWallet"]
edition = "2018"

[lib]
name = "zecwalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
zecwalletlitelib = { git = "https://github.com/ycashfoundation/yecwallet-light-cli", rev = "637aff58b5177c866761512a17cefd16afaddf86" }
